# newsletter-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE.md  README.md  pyproject.toml  requirements.txt  setup_gmail_oauth.py
config/: example_topics_with_features.yaml  topics.yaml
docs/: api-reference.md  architecture.md  configuration-guide.md  deployment-guide.md  developer-guide.md  observability-guide.md  user-guide.md
ideas/: 002-adaptive-deep-research.md  003-observability-cost-tracing.md  newsletter-agent.md
newsletter_agent/: __init__.py  __main__.py  agent.py  cost_tracker.py  http_handler.py  logging_config.py  telemetry.py  timing.py
plans/: README.md  WP01-project-scaffolding.md  WP02-research-pipeline.md  WP03-synthesis-formatting.md  WP04-email-delivery.md  WP05-orchestration-deployment.md  WP06-search-timeframe.md  WP07-link-verification.md  WP08-integration-testing.md  WP09-multi-recipient.md  WP10-pre-synthesis-verification.md  WP11-config-and-cli-runner.md  WP12-deep-research-orchestrator.md  WP13-source-refinement.md  WP14-integration-testing.md  WP15-config-and-prompts.md  WP16-adaptive-orchestrator.md  WP17-acceptance-integration-testing.md  WP18-quality-and-docs.md  WP19-telemetry-foundation.md  WP20-cost-tracking.md  WP21-span-hierarchy-logging.md  WP22-acceptance-testing.md  WP23-grounding-metadata-extraction.md
specs/: 002-adaptive-deep-research.spec.md  003-observability-cost-tracing.spec.md  004-grounding-metadata-extraction.spec.md  autonomous-deep-research.spec.md  link-verification-timeframe.spec.md  (+3 more)
tests/: conftest.py
(+108 files in other folders)
