[project]
name = "newsletter-agent"
version = "0.1.0"
description = "Autonomous multi-agent newsletter system built on Google ADK"
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "unit: Unit tests (no external dependencies)",
    "integration: Integration tests (requires API keys)",
    "e2e: End-to-end tests (requires full environment)",
    "performance: Performance validation tests (may be slow)",
    "security: Security-focused tests (SSRF, header leakage)",
]

[tool.coverage.run]
source = ["newsletter_agent"]
omit = ["tests/*", "newsletter_agent/output/*"]

[tool.coverage.report]
fail_under = 80
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "if TYPE_CHECKING:",
]
